# bonus-track-llm

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: governance.md  product-proposal.md  system-design.md
docs/specs/: agent-orchestrator.md
docs/superpowers/specs/: 2026-04-11-eventai-agent-service-design.md
scripts/: analyze_github.py  chat.py  cli_bot.py  parse_artifacts.py
src/: main.py
src/agent/: agent.py  tools.py
src/bot/keyboards/: program.py
src/bot/middlewares/: platform.py  reconcile.py
src/bot/routers/: __init__.py  detail.py  expert.py  fallback.py  profiling.py  program.py  start.py  support.py
src/core/: config.py  database.py  sanitize.py
src/prompts/: agent.py
src/schemas/: tools.py
src/services/: artifact_parser.py  github_analyzer.py  pdf_export.py  platform_client.py  support.py
tests/: test_agent_tools.py  test_artifact_parser.py  test_e2e.py  test_github_analyzer.py  test_routers.py
